Working page, minimal version

--- a/index.html
+++ b/index.html
@@ -15,19 +15,18 @@
 	{% if site.touch_icon %}<link rel="apple-touch-icon" href="{{ site.touch_icon }}">{% endif %}
 </head>
 <body>
-  <div id="main">
+
+ <div id="main">
 
     <nav><ul>
       {% for node in site.posts reversed %}
-        {% capture id %}{{ node.id | remove:'/' | downcase }}{% endcapture %}
-        <li class="p-{{id}}"><a href="#{{id}}">{{node.title}}</a></li>
+        <li class="border-{{ node.bg }}"><a href="#{{node.title | remove:' ' | downcase}}">{{node.title}}</a></li>
       {% endfor %}
     </ul></nav>
 
 
     {% for page in site.posts reversed %}
-      {% capture id %}{{ page.id | remove:'/' | downcase }}{% endcapture %}
-      <div id="{{id}}" class="section p-{{id}}">
+      <div id="{{page.title | remove:' ' | downcase}}" class="section bg-{{page.bg}}">
         {% if page.icon %}
         <div class="subtlecircle sectiondivider imaged">
           <img src="{{page.icon}}" alt="section icon" />
@@ -37,12 +36,12 @@
         <div class="subtlecircle sectiondivider faicon">
           <span class="fa-stack">
             <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-{{ page.fa-icon }} fa-stack-1x"></i>
+            <i class="fa fa-{{ page.fa-icon }} fa-stack-1x text-{{page.bg}}"></i>
           </span>
-          <h5 class="icon-title">{{ page.title }}</h5>
+          <h5 class="icon-title text-{{page.bg}}">{{ page.title }}</h5>
         </div>
         {% endif %}
-        <div class="container {{ page.style }}">
+        <div class="container text-{{ page.color }} {{ page.style }}">
           {{ page.content }}
         </div>
       </div>
