--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
   <meta property="og:url" content="https://brainhackwarsaw.github.io/" />
   <meta property="og:image" content="img/banner.png" />
 
+
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="387" />
+<meta property="og:site_name" content="AoN Brainhack Warsaw 2017" />
+
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
   <link rel="stylesheet" href="stylesheets/combo.css">
   <link rel="stylesheet" href="stylesheets/style.css">
