--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
   <meta property="og:title" content="{{ site.title }}" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://brainhackwarsaw.github.io/" />
-  <meta property="og:image" content="img/banner.png" />
+  <meta property="og:image" content="img/banner-fb.png" />
 
 
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="387" />
 <meta property="og:site_name" content="AoN Brainhack Warsaw 2017" />
 
+<meta name="twitter:title" content="AoN Brainhack Warsaw 2017" />
+<meta name="twitter:description" content="The call for proposals for the AoN Brainhack Warsaw 2017 is now open!" />
+<meta name="twitter:image" content="img/banner-twitter.png" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
   <link rel="stylesheet" href="stylesheets/combo.css">
