--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 <meta property="og:image:height" content="387" />
 <meta property="og:site_name" content="AoN Brainhack Warsaw 2017" />
 
+
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@{{ site.twitter_username }}" />	
 <meta name="twitter:title" content="AoN Brainhack Warsaw 2017" />
 <meta name="twitter:description" content="The call for proposals for the AoN Brainhack Warsaw 2017 is now open!" />
 <meta name="twitter:image" content="img/banner-twitter.png" />
