--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@{{ site.twitter_username }}" />	
+  <meta name="twitter:creator" content="@{{ site.twitter_username }}" />
 <meta name="twitter:title" content="AoN Brainhack Warsaw 2017" />
 <meta name="twitter:description" content="The call for proposals for the AoN Brainhack Warsaw 2017 is now open!" />
 <meta name="twitter:image" content="img/banner-twitter.png" />
