--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   <meta name="twitter:creator" content="@{{ site.twitter_username }}" />
 <meta name="twitter:title" content="AoN Brainhack Warsaw 2017" />
 <meta name="twitter:description" content="The call for proposals for the AoN Brainhack Warsaw 2017 is now open!" />
-<meta name="twitter:image" content="img/banner-twitter.png" />
+<meta name="twitter:image:src" content="https://brainhackwarsaw.github.io/img/banner-twitter.png">
+
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
   <link rel="stylesheet" href="stylesheets/combo.css">
