--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.7/slick.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.8/slick-theme.css"/>
-<link rel="shortcut icon" type="image/png" href="{{ "/img/favicon.png" | prepend: site.baseurl }}" >
+<link rel="shortcut icon" type="image/png" href="https://brainhackwarsaw.github.io/img/favicon.png"/ >
   {% include analytics.html %} 
 </head>
 <body>
