--- a/index.html
+++ b/index.html
@@ -11,12 +11,8 @@
 
   <meta property="og:title" content="{{ site.title }}" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://brainhackwarsaw.github.io/" />
-  <meta property="og:image" content="img/banner-fb.png" />
-
-
-<meta property="og:image:width" content="1200" />
-<meta property="og:image:height" content="387" />
+  <meta property="og:url" content="{{ site.url }}" />
+  <meta property="og:image" content="{{ site.url }}/img/banner-fb.png" />
 <meta property="og:site_name" content="AoN Brainhack Warsaw 2017" />
 
 
@@ -24,8 +20,8 @@
   <meta name="twitter:site" content="@{{ site.twitter_username }}" />	
   <meta name="twitter:creator" content="@{{ site.twitter_username }}" />
 <meta name="twitter:title" content="AoN Brainhack Warsaw 2017" />
-<meta name="twitter:description" content="The call for proposals for the AoN Brainhack Warsaw 2017 is now open!" />
-<meta name="twitter:image:src" content="https://brainhackwarsaw.github.io/img/banner-twitter.png">
+<meta name="twitter:description" content="{{ site.twitter_description }}" />
+<meta name="twitter:image:src" content="{{ site.url }}/img/banner-fb.png">
 
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
