--- a/index.html
+++ b/index.html
@@ -6,24 +6,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ site.title }}</title>
-	<meta name="keywords" content="{{ site.keywords }}">
-	<meta name="description" content="{{ site.description }}">
-
+  <meta name="keywords" content="{{ site.keywords }}">
+  <meta name="description" content="{{ site.description }}">
+  <!-- social media -->
   <meta property="og:title" content="{{ site.title }}" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="{{ site.url }}" />
   <meta property="og:image" content="{{ site.url }}/img/banner-fb.png" />
-<meta property="og:site_name" content="AoN Brainhack Warsaw 2017" />
-
-
+  <meta property="og:site_name" content="AoN Brainhack Warsaw 2017" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@{{ site.twitter_username }}" />	
   <meta name="twitter:creator" content="@{{ site.twitter_username }}" />
-<meta name="twitter:title" content="AoN Brainhack Warsaw 2017" />
-<meta name="twitter:description" content="{{ site.twitter_description }}" />
-<meta name="twitter:image:src" content="{{ site.url }}/img/banner-fb.png">
-
-
+  <meta name="twitter:title" content="AoN Brainhack Warsaw 2017" />
+  <meta name="twitter:description" content="{{ site.twitter_description }}" />
+  <meta name="twitter:image:src" content="{{ site.url }}/img/banner-fb.png">
+  <!-- style -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
   <link rel="stylesheet" href="stylesheets/combo.css">
   <link rel="stylesheet" href="stylesheets/style.css">
@@ -31,10 +28,10 @@
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.7/slick.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.8/slick-theme.css"/>
-
-
-{% include analytics.html %}
-
+  <!-- icons -->
+  <link rel="icon"  type="image/x-icon" href="{{ site.url }}//favicon.ico?">
+  <link rel="shortcut icon" type="image/png" href="{{ site.url }}/img/favicon.png">
+  {% include analytics.html %}
 
 </head>
 <body>
