--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.7/slick.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.8/slick-theme.css"/>
   <!-- icons -->
-  <link rel="icon"  type="image/x-icon" href="{{ site.url }}/img/favicon.ico?">
-  <link rel="shortcut icon" type="image/png" href="{{ site.url }}/img/favicon.png">
+  <link rel="shortcut icon" type="image/png" href="{{ site.url }}/img/favicon.png?">
   {% include analytics.html %}
 
 </head>
