--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 <body>
   <div id="main">
-
+        onclick = "void(0)"
      <nav>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="right fa fa-bars"></i></a>
       <ul class="hide-on-med-and-down">
@@ -46,6 +46,7 @@
       {% endfor %}
       </ul>
       <ul class="side-nav" id="mobile-demo">
+
       {% for node in site.posts reversed %}
         {% capture id %}{{ node.id | remove:'/' | downcase }}{% endcapture %}
         <li class="p-{{id}}"><a href="#{{id}}">{{node.title}}</a></li>
