--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{{ site.title }}</title>
+  <title>AoN Brainhack Warsaw 2019</title>
   <meta name="keywords" content="{{ site.keywords }}">
   <meta name="description" content="{{ site.description }}">
   <!-- social media -->
@@ -15,7 +15,7 @@
   <meta property="og:image" content="{{ site.url }}/img/banner-fb.png" />
   <meta property="og:site_name" content="AoN Brainhack Warsaw 2017" />
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@{{ site.twitter_username }}" />	
+  <meta name="twitter:site" content="@{{ site.twitter_username }}" />
   <meta name="twitter:creator" content="@{{ site.twitter_username }}" />
   <meta name="twitter:title" content="AoN Brainhack Warsaw 2017" />
   <meta name="twitter:description" content="{{ site.twitter_description }}" />
@@ -82,7 +82,7 @@
         </div>
       </div>
     {% endfor %}
- 
+
     <div id="footer" class="section text-white">
       <div class="container">
         {% capture foottext %} {% include footer.md %} {% endcapture %}
