--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Brainhack Warsaw 2019</title>
+  <title>{{ site.title }}</title>
   <meta name="keywords" content="{{ site.keywords }}">
   <meta name="description" content="{{ site.description }}">
   <!-- social media -->
@@ -15,7 +15,7 @@
   <meta property="og:image" content="{{ site.url }}/img/banner-fb.png" />
   <meta property="og:site_name" content="AoN Brainhack Warsaw 2017" />
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@{{ site.twitter_username }}" />
+  <meta name="twitter:site" content="@{{ site.twitter_username }}" />	
   <meta name="twitter:creator" content="@{{ site.twitter_username }}" />
   <meta name="twitter:title" content="AoN Brainhack Warsaw 2017" />
   <meta name="twitter:description" content="{{ site.twitter_description }}" />
@@ -36,8 +36,8 @@
 </head>
 <body>
   <div id="main">
-        onclick = "void(0)"
-     <nav>
+
+    <nav>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="right fa fa-bars"></i></a>
       <ul class="hide-on-med-and-down">
       {% for node in site.posts reversed %}
@@ -46,7 +46,6 @@
       {% endfor %}
       </ul>
       <ul class="side-nav" id="mobile-demo">
-
       {% for node in site.posts reversed %}
         {% capture id %}{{ node.id | remove:'/' | downcase }}{% endcapture %}
         <li class="p-{{id}}"><a href="#{{id}}">{{node.title}}</a></li>
@@ -82,7 +81,7 @@
         </div>
       </div>
     {% endfor %}
-
+ 
     <div id="footer" class="section text-white">
       <div class="container">
         {% capture foottext %} {% include footer.md %} {% endcapture %}
