--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <meta property="og:title" content="{{ site.title }}" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="{{ site.url }}" />
-  <meta property="og:image" content="{{ site.url }}/img/banner_bhw2019.png" />
+  <meta property="og:image" content="{{ site.url }}/img/banner_fb.png" />
   <meta property="og:site_name" content="Brainhack Warsaw 2019" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@{{ site.twitter_username }}" />
   <meta name="twitter:creator" content="@{{ site.twitter_username }}" />
   <meta name="twitter:title" content="Brainhack Warsaw 2019" />
   <meta name="twitter:description" content="{{ site.twitter_description }}" />
-  <meta name="twitter:image:src" content="{{ site.url }}/img/banner_bhw2019.png">
+  <meta name="twitter:image:src" content="{{ site.url }}/img/banner_fb.png">
   <!-- style -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
   <link rel="stylesheet" href="stylesheets/combo.css">
