--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="twitter:creator" content="@{{ site.twitter_username }}" />
   <meta name="twitter:title" content="Brainhack Warsaw 2019" />
   <meta name="twitter:description" content="{{ site.twitter_description }}" />
-  <meta name="twitter:image:src" content="{{ site.url }}/img/banner_twitter2019.png">
+  <meta name="twitter:image:src" content="{{ site.url }}/img/banner-fb.png" >
   <!-- style -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
   <link rel="stylesheet" href="stylesheets/combo.css">
